<resources>
    <string name="app_name">Kinopoisk-test-app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_text">favorite</string>
    <string name="popular_text">favorite</string>
    <string name="no_internet">Произошла ошибка при загрузке данных,\nпроверьте подключение к сети</string>
    <string name="server_error">Не найдено</string>
    <string name="popular_header">Популярное</string>
    <string name="search_hint">Поиск</string>
    <string name="repeat">Повторить</string>
    <string name="genre_label">Жанры: </string>
    <string name="country_label">Страна: </string>
    <string name="favorite_header">Избранное</string>
    <string name="nothing_found_favorites">Пока вы ничего не добавили в избранное</string>
    <string name="delete_from_fav_dialog">Удалить фильм из избранного?</string>
    <string name="dialog_no">Нет</string>
    <string name="dialog_yes">Да</string>
    <string name="already_in_favorites">Фильм уже в избранном!</string>
    <string name="added_to_favorites">Фильм добавлен в избранное</string>
    <string name="add_to_favorite_error">Ошибка при добалении в избранное :(</string>
</resources>