<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/screen_background_color"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_32dp"
            android:layout_height="@dimen/_32dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_29dp"
            android:padding="@dimen/_4dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_internet_error"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            android:src="@drawable/ic_error"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_internet_error"
            style="@style/TFRobotoRegular14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/no_internet"
            android:textAlignment="center"
            android:textColor="?attr/blue"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_internet_error"
            app:layout_constraintVertical_bias="0" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="@dimen/_52dp"
            android:layout_height="@dimen/_52dp"
            android:indeterminateTint="?attr/blue"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transp_background"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bs_movie_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_bottom_sheet"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_32dp"
        app:behavior_peekHeight="@dimen/_300dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="visible">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_rectangle" />

        <TextView
            android:id="@+id/tv_movie_title"
            style="@style/TFRobotoBold20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16dp"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="Изгой-один Звездные войны Изгой-один Звездные войны" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TFRobotoRegular16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            tools:text="Сопротивление собирает отряд для выполнения особой миссии - надо выкрасть чертежи самого совершенного и мертоносного оружия Империи. Не всем суждено вернуться домой, но герои готовы к этому, ведь на кону судьба Галактики" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_genre_label"
                style="@style/TFRobotoBold16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:text="@string/genre_label" />

            <TextView
                android:id="@+id/tv_genre_value"
                style="@style/TFRobotoRegular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="Жанры: фантастика, приключения" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_country_label"
                style="@style/TFRobotoBold16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_label" />

            <TextView
                android:id="@+id/tv_country_value"
                style="@style/TFRobotoRegular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3dp"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="США" />

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>